deploy/k8s/overlays/prod-k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devboard-ingress
  namespace: devboard-prod
spec:
  ingressClassName: nginx
  rules:
    - host: prod.devboard.local
      http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: devboard-event-service
                port:
                  number: 8081
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: devboard-event-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devboard-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devboard-frontend
                port:
                  number: 80
